# mini-game-engine

./: README.md
GameEngine/: CMakeLists.txt  GameEngine  main.cpp
GameEngine/include/: Scene.h
include/: Component.h  Components.h  Engine.h  GameObject.h
